--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,9 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+    <string>__change later</string>
+    <key>NSMicrophoneUsageDescription</key>
+     <string>__change later</string>
 </dict>
 </plist>
