--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,13 @@ dependencies:
   firebase_messaging: ^14.6.4
   flutter_local_notifications: ^9.2.0
   pay: ^1.1.1
+  speech_to_text: ^6.1.1
+  flutter_tts: ^3.6.3
+  animate_do: ^3.0.2
+  firebase_auth: ^4.7.1
+  flutter_easyloading: ^3.0.5
+
+
 
 
 
@@ -87,6 +94,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/sounds/
   #   - images/a_dot_ham.jpeg
 
 
